--- a/.github/workflows/lint-test.yml
+++ b/.github/workflows/lint-test.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-
+      - uses: pnpm/action-setup@v4.0.0
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
